--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
 
     document.getElementById("probl").insertAdjacentHTML('afterend', content);
   </script>--> 
+
+  <section data-include-format="html"
+         data-include="UitwisselenUitkomstOverleg.html"
+         data-include-replace="true"></section>
 	
   <section data-include-format="html"
          data-include="LOGICAL-JZV-1-20251001.respec.html"
