--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
          data-include="LOGICAL-JZV-1-20251001.respec.html"
          data-include-replace="true"></section>
 
-  <section data-include-format="html"
+  <!-- <section data-include-format="html"
          data-include="test.html"
-         data-include-replace="true"></section>
+         data-include-replace="true"></section> -->
 
 	<!-- <section id="imvertorexp1" data-include-format="html" data-include="LOGICAL-JZV-1-20251001.respec.html"></section> -->
   <!-- <section id="htmltest" data-include-format="html" data-include="test.html"></section> -->
