--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
          data-include="LOGICAL-JZV-1-20251001.respec.html"
          data-include-replace="true"></section>
 
+  <section data-include-format="html"
+         data-include="LOGICAL-JZV-1-20251002.respec.html"
+         data-include-replace="true"></section>
+	
   <!-- <section data-include-format="html"
          data-include="test.html"
          data-include-replace="true"></section> -->
