--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
          data-include-replace="true"></section> -->
 	
   <section data-include-format="html"
-         data-include="LOGICAL-JZV-1-20251001.respec.html"
+         data-include="LOGICAL-JZV-Uitkomst-Overleg-1-20251001.respec"
          data-include-replace="true"></section>
 
   <section data-include-format="html"
