--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     document.getElementById("probl").insertAdjacentHTML('afterend', content);
   </script>--> 
 
-  <!-- <section data-include-format="html"
+  <section data-include-format="html"
          data-include="UitwisselenUitkomstOverleg.html"
-         data-include-replace="true"></section> -->
+         data-include-replace="true"></section>
 	
   <section data-include-format="html"
          data-include="LOGICAL-JZV-Uitkomst-Overleg-1-20251001.respec"
