--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
     document.getElementById("probl").insertAdjacentHTML('afterend', content);
   </script>--> 
 
-  <section data-include-format="html"
+  <!-- <section data-include-format="html"
          data-include="UitwisselenUitkomstOverleg.html"
-         data-include-replace="true"></section>
+         data-include-replace="true"></section> -->
+
+  <section id="uitwisselenuitkomstoverleg" data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></section>
 	
   <section data-include-format="html"
          data-include="LOGICAL-JZV-Uitkomst-Overleg-1-20251001.respec"
