--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
          data-include="UitwisselenUitkomstOverleg.html"
          data-include-replace="true"></section> -->
 
+  <section id="uitwisselenuitkomstoverleg" data-include-format="markdown" data-include="Stelselvoorzieningen.md"></section>
+  <section id="uitwisselenuitkomstoverleg" data-include-format="markdown" data-include="Overzicht.md"></section>
   <section id="uitwisselenuitkomstoverleg" data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></section>
 	
   <section data-include-format="html"
