--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <section id="secuuo" data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></section> -->
 	
   <section data-include-format="html"
-         data-include="LOGICAL-JZV-Uitkomst-Overleg-1-20251001.respec"
+         data-include="LOGICAL-JZV-Uitkomst-Overleg-1-20251001.respec.html"
          data-include-replace="true"></section>
 
   <section data-include-format="html"
