--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
          data-include="UitwisselenUitkomstOverleg.html"
          data-include-replace="true"></section> -->
 
-  <section id="rm" data-include-format="markdown" data-include="Overzicht.md"></section>
-  <section id="rm" data-include-format="markdown" data-include="Stelselvoorzieningen.md"></section>
-  <section id="rm" data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></section>
+  <section id="secov" data-include-format="markdown" data-include="Overzicht.md"></section>
+  <section id="secsv" data-include-format="markdown" data-include="Stelselvoorzieningen.md"></section>
+  <section id="secuuo" data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></section>
 	
   <section data-include-format="html"
          data-include="LOGICAL-JZV-Uitkomst-Overleg-1-20251001.respec.html"
