--- a/index.html
+++ b/index.html
@@ -60,7 +60,14 @@
 
   <section id="secov" data-include-format="markdown" data-include="Overzicht.md"></section>
   <section id="secsv" data-include-format="markdown" data-include="Stelselvoorzieningen.md"></section>
-  <section id="secuuo" data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></section>
+
+	
+  <!-- <section id="secuuo" data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></section> -->
+
+  <section id="part-a">
+  	<h2>Part A</h2>
+  	<div data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></div>
+  </section>
 	
   <section data-include-format="html"
          data-include="LOGICAL-JZV-Uitkomst-Overleg-1-20251001.respec.html"
