--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <section id="part-a">
   	<h2>Part A</h2>
-  	<div data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></div>
+  	<section data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></section>
   </section>
 	
   <section data-include-format="html"
