--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 	
   <!-- <section id="secuuo" data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></section> -->
 
-  <section id="part-a">
-  	<h2>Part A</h2>
-  	<section data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></section>
+  <section id="uuo">
+  	<h2>Uitwisselen Uitkomst Overleg</h2>
+  	<section id="subuuo" data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></section>
   </section>
 	
   <section data-include-format="html"
