Nog wat aangepaste bestanden

--- a/index.html
+++ b/index.html
@@ -61,21 +61,31 @@
   <section id="secov" data-include-format="markdown" data-include="Overzicht.md"></section>
   <section id="secsv" data-include-format="markdown" data-include="Stelselvoorzieningen.md"></section>
 
+	<section id="mld">
+  	<h2>Uitwisselen Melding</h2>
+  	<section id="mldsub" data-include-format="markdown" data-include="UitwisselenMelding.md"></section>
+    <section data-include-format="html"
+         data-include="LOGICAL-JZV - Melding-1-20251230.respec.html"
+         data-include-replace="true"></section>
+  </section>
 	
   <!-- <section id="secuuo" data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></section> -->
 
   <section id="uuo">
   	<h2>Uitwisselen Uitkomst Overleg</h2>
-  	<section id="subuuo" data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></section>
-  </section>
-	
-  <section data-include-format="html"
+  	<section id="uuosub" data-include-format="markdown" data-include="UitwisselenUitkomstOverleg.md"></section>
+    <section data-include-format="html"
          data-include="LOGICAL-JZV-UitkomstOverleg-1-20251001.respec.html"
          data-include-replace="true"></section>
+  </section>
+	
+  <!-- <section id="subuuo-gen" data-include-format="html"
+         data-include="LOGICAL-JZV-UitkomstOverleg-1-20251001.respec.html"
+         data-include-replace="true"></section> -->
 
-  <section data-include-format="html"
+  <!-- <section data-include-format="html"
          data-include="LOGICAL-JZV-1-20251002.respec.html"
-         data-include-replace="true"></section>
+         data-include-replace="true"></section> -->
 	
   <!-- <section data-include-format="html"
          data-include="test.html"
